# A4_ChessGame

./: .gitignore  README.md  ai_thuc_chien.py  config.py  main.py  main_RL.py  pyproject.toml  server.py  train.py
agents/: __init__.py  base_agent.py  dl_agent.py  mcts_agent.py  minimax_agent.py  random_agent.py  rl_agent.py
ai/: agent.py  model.py
ai/DL/: our_model.py  tensor_converter.py
ai/DL/trained_model/: best_chess_model.keras
controllers/: game_controller.py  turn_controller.py
core/: board.py  game_state.py  move.py  network_client.py  rules.py  save_manager.py  sound_manager.py  timer.py  utils.py
network/: client.py
pieces/: base_piece.py  bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
server/: main.py  room.py  server_core.py  test_client.py
tests/: test_agents.py  test_board.py  test_rules_and_state.py  test_special_moves.py  test_ui.py
ui/: action_panel_ui.py  animation.py  board_ui.py  dialog_ui.py  input_handler.py  menu.py  pause_menu.py  piece_ui.py  promotion_dialog.py  renderer.py  timer_ui.py
